--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@ngrok/ngrok": "^1.5.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
